[package]
name = "story"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
js-sys = "0.3.57"
console_error_panic_hook = "0.1.7"
lazy_static = "1.4.0"
